# SPOCStat

./: .VERSION  .gitignore  .travis.yml  Brewfile.travis  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SPOCS-definition.md  requirements.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.travis.d/: install_cmake_linux.sh
assets/: SPOCS_banner.txt  SPOCS_logo.bw.ascii  SPOCS_logo.color.ascii
cmake/: CMakeHeader.cmake  CMakeLists.txt.old  CompilerSpecificSettings.cmake  FortranBiggestInt.cmake  Fortran_biggest_int.cmake  compiler-specific-settings.cmake
src/: CMakeLists.txt  moments.F90
src/common/: CMakeLists.txt  TODO.md  assertion.F90  debugging.f90  fort_init_RTL.F90  kinds.F90  physical_const.F90  stringhelper.F90  teststringhelper.F90  testtemplate.F90
src/introspection/: CacheLineSize.c  CacheLineSize.f90  CacheLineSize.h  GetPageSize.c
src/introspection/tests/: testCacheLineSize.f90
src/spocs/: .dir-locals.el  CMakeLists.txt  Makefile  binomial.F90  covN.F90  covN_factory.F90  spocs.F90  spocs_accuracy.F90  spocs_cov.F90  spocs_cov_factory.F90  spocs_factory.F90  statN.F90  statN_factory.F90  testbinomial.F90  testspocs.F90  traditional-stats.f90
src/statistical-distributions/: CMakeLists.txt  normal_dist.F90  testnormal_dist.F90
